--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,16 @@
-This is a repository for a test blog app I'm working on.
+This is a rails project for a blog that logs in users, allows them to post articles and edit them.
 
-Completely built in rails.
+# Prerequisites
+⋅⋅* `Ruby ~=2.1`
+⋅⋅* `Rails ~=v.4.2.5.1`
+
+# Installation
+Run this command on your terminal to clone the repository
+..*`git clone  https://github.com/OracleInc/alpha-blog.git`
+Run bundle install to install the necessary gem files
+⋅⋅`*bundle install`
+*Run the server
+⋅⋅`*rails s`
+
+
+
